Paar nl2brs & sponsor verbeterd

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,3 +1,4 @@
 {
+    "homepagina-intro": "Deze tekst kun je aanpassen!\r\n\r\nTest voor NL2BR",
     "bestuursleden-intro": "Deze tekst kun je aanpassen!"
 }
