Fix redirect + meer editable teksten

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,5 @@
 {
-    "homepagina-intro": "Deze tekst kun je aanpassen!\r\n\r\nTest voor NL2BR",
-    "bestuursleden-intro": "Deze tekst kun je aanpassen!"
+    "homepagina-intro": "Dit is de website van toneelvereniging Christina! Hier kun je een hele boel tekst neer zetten nu!!",
+    "bestuursleden-intro": "Deze tekst kun je aanpassen!",
+    "faq": "Wanneer zijn de voorstellingen?\r\nDat kan je vinden onder \"Voorstellingen\"."
 }
