--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,5 +1,6 @@
 {
     "homepagina-intro": "Dit is de website van toneelvereniging Christina! Hier kun je een hele boel tekst neer zetten nu!!",
     "bestuursleden-intro": "Deze tekst kun je aanpassen!",
-    "faq": "Wanneer zijn de voorstellingen?\r\nDat kan je vinden onder \"Voorstellingen\"."
+    "faq": "Wanneer zijn de voorstellingen?\r\nDat kan je vinden onder \"Voorstellingen\".",
+    "image": "\/images\/groepsfoto.jpg"
 }
