feat(Introduction): add to all pages where it's needed

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,6 +1,25 @@
 {
     "homepagina-intro": "Dit is de website van toneelvereniging Christina! Hier kun je een hele boel tekst neer zetten nu!!",
-    "bestuursleden-intro": "Deze tekst kun je aanpassen!",
+    "voorstelling-titel": "Voorstelling",
+    "voorstellingintro": "Welkom bij de voorstelling pagina!",
+    "voorstellingen-overzicht-titel": "Voorstellingen",
+    "voorstellingen-overzicht-intro": "Welkom bij de voorstellingen pagina!",
+    "nieuws-titel": "Nieuws",
+    "nieuws-intro": "Welkom bij de nieuws pagina!",
+    "historie-titel": "Historie",
+    "historie-intro": "Welkom bij de historie pagina!",
+    "galerij-titel": "Galerij",
+    "galerij-intro": "Welkom bij de galerij pagina!",
+    "bestuursleden-titel": "Bestuursleden",
+    "bestuursleden-intro": "Welkom bij de bestuursleden pagina!",
+    "sponsoren-titel": "Sponsoren",
+    "sponsoren-intro": "Welkom bij de sponsoren pagina!",
+    "doneren-titel": "Doneren",
+    "doneren-intro": "Welkom bij de doneren pagina!",
+    "inschrijven-titel": "Inschrijven",
+    "inschrijven-intro": "Welkom bij de inschrijven pagina!",
+    "contact-titel": "Contact",
+    "contact-intro": "Welkom bij de contact pagina!",
     "faq": "Wanneer zijn de voorstellingen?\r\nDat kan je vinden onder \"Voorstellingen\".",
     "image": "\/images\/groepsfoto.jpg"
 }
