fix(Introduction): typo in en.json

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,7 +1,7 @@
 {
     "homepagina-intro": "Dit is de website van toneelvereniging Christina! Hier kun je een hele boel tekst neer zetten nu!!",
     "voorstelling-titel": "Voorstelling",
-    "voorstellingintro": "Welkom bij de voorstelling pagina!",
+    "voorstelling-intro": "Welkom bij de voorstelling pagina!",
     "voorstellingen-overzicht-titel": "Voorstellingen",
     "voorstellingen-overzicht-intro": "Welkom bij de voorstellingen pagina!",
     "nieuws-titel": "Nieuws",
