fix(Bestuursleden): verschillende tekst voor intro stukje en intro blok

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -12,6 +12,7 @@
     "galerij-intro": "Welkom bij de galerij pagina!",
     "bestuursleden-titel": "Bestuursleden",
     "bestuursleden-intro": "Welkom bij de bestuursleden pagina!",
+    "bestuursleden-blok-intro": "Op deze pagina zijn al onze bestuursleden te vinden!",
     "sponsoren-titel": "Sponsoren",
     "sponsoren-intro": "Welkom bij de sponsoren pagina!",
     "doneren-titel": "Doneren",
