--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -21,6 +21,7 @@
     "inschrijven-intro": "Welkom bij de inschrijven pagina!",
     "contact-titel": "Contact",
     "contact-intro": "Welkom bij de contact pagina!",
+    "contactgegevens": "Email\r\ntoneelverenigingchristina@gmail.com\r\n\r\nTelefoonnummer\r\n06-36176711",
     "faq": "Wanneer zijn de voorstellingen?\r\nDat kan je vinden onder \"Voorstellingen\".",
     "image": "\/images\/groepsfoto.jpg"
 }
